transmission/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: transmission
spec:
  clusterIP: None
  ports:
    - port: 80
      targetPort: 9191
      name: http
  selector:
    app: transmission
