transmission/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    name: transmission
spec:
    routes:
        - kind: Rule
          match: ENC[AES256_GCM,data:gRf+3oabCGUByRAl30bqr4LrcIyl5cw3xIdcJORzGW8=,iv:XoGAwj4VLis90Bez/UgiwdjBCw40lyikXaIkLQZ8cSI=,tag:HdGyoZY51x2WRz4FqQzCHw==,type:str]
          middlewares: []
          services:
            - kind: Service
              name: transmission
              port: 80
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age: []
    lastmodified: "2023-09-09T17:59:59Z"
    mac: ENC[AES256_GCM,data:QSjP/oFKhuf1tZLqtOk2Xw5zAOUr1PU/jLwFehJ82n7um8OK3N5XdDMmYMb6f9iju//EpoqrL2VI6mqmNKl3GHnAP4NyQ/DfC4SY4sRDHu+Bm2ePMWDsXouwG04cuihK9c3nIyka8BrTT15okjqCxc7ju1rfJRDmevkGUjzc5LA=,iv:AkIWXBM28TqR79teq3bmXby9T+zQ1S540UbXE8uwOcA=,tag:Rtt72iq4ygWOgjxXrPt7PQ==,type:str]
    pgp:
        - created_at: "2023-09-09T17:59:58Z"
          enc: |
            -----BEGIN PGP MESSAGE-----

            hQIMAyyGYy7YCFAQARAAitJcIJ3N4OVYmYsFnKhcEMq64RJD2tptF80qEEVF72aE
[...]
            u6vp1ImaKKQd
            =BuY7
            -----END PGP MESSAGE-----
          fp: 75C3F62D6A9AA2165875F5C680A364E41D3C47AF
    encrypted_regex: ^(match)$
    version: 3.7.3
